development/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mondgodb-deployment
    labels:
        app: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongodb
    template:
        metadata:
            labels:
                app: mongodb
        spec:
            containers:
            - name: mongodb
              image: mongo
              ports:
              - containerPort: 27017
              volumeMounts:
              - name: datavol
                mountPath: /data/db
            volumes:
            - name: datavol
              persistentVolumeClaim:
                claimName: g2048-pvc
---
apiVersion: v1
kind: Service
metadata: 
    name: monbodb-service
spec:
    selector:
        app: mongodb
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
