development/mongodb-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mondgodb-express
    labels:
        app: mongodb-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongodb-express
    template:
        metadata:
            labels:
                app: mongodb-express
        spec:
            containers:
            - name: mongo-express
              image: mongo-express
              ports:
              - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata: 
    name: monbodb-express-service
spec:
    selector:
        app: mongodb-express
    type: LoadBalancer # Assigns an external IP Address, does not actually balance
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 8081 
          nodePort: 30081
