development/g2048.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: g2048
    labels:
        app: g2048
spec:
    replicas: 1
    selector:
        matchLabels:
            app: g2048
    template:
        metadata:
            labels:
                app: g2048
        spec:
            containers:
            - name: g2048
              image: blackicebird/2048
              ports:
              - containerPort: 80
              securityContext:
                runAsUser: 0
---
apiVersion: v1
kind: Service
metadata: 
    name: g2048-service
spec:
    selector:
        app: g2048
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80 
          nodePort: 32333
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: g2048-route
spec:
  to:
    kind: Service
    name: g2048-service
