development/mongodb-express-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongodb-express-route
spec:
  to:
    kind: Service
    name: mongodb-express
