development/nodered.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nodered
    labels:
        app: nodered
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nodered
    template:
        metadata:
            labels:
                app: nodered
        spec:
            containers:
            - name: nodered
              image: yeasy/simple-web
              volumeMounts:
              - name: datavol
                mountPath: /data
              ports:
              - containerPort: 1880
            volumes:
            - name: datavol
              persistentVolumeClaim:
                claimName: nodered-pvc
---
apiVersion: v1
kind: Service
metadata: 
    name: nodered-service
spec:
    selector:
        app: nodered
    type: LoadBalancer # Assigns an external IP Address, does not actually balance
    ports:
        - protocol: TCP
          port: 1880
          targetPort: 1880 
          nodePort: 31880
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodered-route
spec:
  to:
    kind: Service
    name: nodered-service
